# SVTopo

./: .gitignore  Cargo.toml  LICENSE-THIRDPARTY.json  conftest.py  pytest.ini  readme.md  user_guide.md
HiFi-SVTopoVz/: requirements.txt  setup.py
HiFi-SVTopoVz/svtopovz/: __main__.py  bed_plotter.py  bnd_plotter.py  chain_plotter.py  svtopovz.py  utils.py
SVTopoVz/: MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg
SVTopoVz/svtopovz/: __main__.py  annotation_plotter.py  bed_plotter.py  bnd_plotter.py  chain_plotter.py  page_builder.py  svtopovz.py  utils.py
SVTopoVz/svtopovz/templates/: svtopo.html
changelogs/: v0.2.0.changelog.md  v0.3.0.changelog.md
docker-rust/: Dockerfile  README.md  bamboo_docker_build.sh  build_image.sh
docs/: cnidaria_plotter_usage.md  cnidaria_usage.md  index.html  installation.md  result_interpretation.md  snakemake_workflow.md  svtopo_usage.md  svtopovz_usage.md  user_guide.md
plotter/: requirements.txt  setup.py
plotter/cnidaria_plotter/: __main__.py  bnd_plotter.py  chain_plotter.py  cnidaria_plotter.py
plotter/svtopovz/: __main__.py  svtopovz.py
src/: bam_sa_parser.rs  block_filter.rs  cli.rs  cluster_connector.rs  cluster_finder.rs  cluster_support_builder.rs  containers.rs  event_graph_builder.rs  graph_annotator.rs  ingester.rs  lib.rs  main.rs  result_writer.rs  utils.rs
test/data/bam/: chr10_65512263_65543775_vcf.bam  chr10_65512263_65543775_vcf.bam.bai  chr10_80532333_80535592_vcf.bam  chr10_80532333_80535592_vcf.bam.bai  chr11_55569787_55705940.bam  chr11_55569787_55705940.bam.bai  chr12_79747027_79780697.bam  chr12_79747027_79780697.bam.bai  chr17_5965780_6003909_vcf.bam  chr17_5965780_6003909_vcfonly.bam.bai  chr1_158883964_159006873.bam  chr1_158883964_159006873.bam.bai  chr1_174937531_174952891.bam  chr1_174937531_174952891.bam.bai  chr1_187480121_187518173_vcf.bam.bai  chr1_187481121_187517173_vcfonly.bam  chr1_207099428_207136589_vcf.bam  chr1_207099428_207136589_vcf.bam.bai  chr20_10783560_10831111_vcf.bam  chr20_10783560_10831111_vcf.bam.bai  chr21_25982380_26031849_vcf.bam  chr21_25982380_26031849_vcf.bam.bai  chr21_26626844_26674691_vcf.bam  chr21_26626844_26674691_vcf.bam.bai  chr2_138232624_138273628_vcf.bam  chr2_138232624_138273628_vcf.bam.bai  chr3_6596607_6614883.bam  chr3_6596607_6614883.bam.bai  chr3_82132007_82170603_vcf.bam  chr3_82132007_82170603_vcf.bam.bai  chr3_83782468_84078223_vcf.bam  chr3_83782468_84078223_vcf.bam.bai  chr4_114564136_114608680.bam  chr4_114564136_114608680.bam.bai  chr4_129127981_129165882.bam  chr4_129127981_129165882.bam.bai  chr4_158331901_158385130.bam  chr4_158331901_158385130.bam.bai  chr4_189119276_189296037.bam  chr4_189119276_189296037.bam.bai  (+6 more)
test/data/bed/: chr10_80532333_80535592.bed  chr11_55569787_55705940.bed  chr12_79747027_79780697.bed  chr17_5965780_6003909.bed  chr1_158883964_159006873.bed  chr1_187480121_187518173.bed  chr1_187481121_187517173.bed  chr1_207099428_207136589.bed  chr20_10783560_10831111.bed  chr21_25982380_26031849.bed  chr21_26626844_26674691.bed  chr2_138232624_138273628.bed  chr3_6596607_6614883.bed  chr3_82132007_82170603.bed  chr3_83782468_84078223.bed  chr4_114564136_114608680.bed  chr4_129127981_129165882.bed  chr4_158331901_158385130.bed  chr7_40820002_40856731.bed  chr9_135297437_135362339.bed
test/data/json/: chr10_80532333_80535592.json  chr11_55569787_55705940.json  chr12_79747027_79780697.json  chr17_5965780_6003909.json  chr1_158883964_159006873.json  chr1_174937531_174952891.json  chr1_187480121_187518173.json  chr1_187481121_187517173.json  chr1_207099428_207136589.json  chr20_10783560_10831111.json  chr21_25982380_26031849.json  chr21_26626844_26674691.json  chr2_138232624_138273628.json  chr3_6596607_6614883.json  chr3_82132007_82170603.json  chr3_83782468_84078223.json  chr4_114564136_114608680.json  chr4_129127981_129165882.json  chr4_158331901_158385130.json  chr4_189119276_189296037.json  chr7_40820002_40856731.json  chr9_135297437_135362339.json  chr9_87906696_88156295.json
test/data/site_pages/: chr1-158883964-159006873.html  chr1-187480121-187518173.html  chr1-187481121-187517173.html  chr1-207099428-207136589.html  chr10-80532333-80535592.html  chr11-55569787-55705940.html  chr12-79747027-79780697.html  chr17-5965780-6003909.html  chr2-138232624-138273628.html  chr20-10783560-10831111.html  chr21-25982380-26031849.html  chr21-26626844-26674691.html  chr3-6596607-6614883.html  chr3-82132007-82170603.html  chr3-83782468-84078223.html  chr4-114564136-114608680.html  chr4-129127981-129165882.html  chr4-158331901-158385130.html  chr7-40820002-40856731.html  chr9-135297437-135362339.html
test/data/svtopo-dirs/chr10_80532333_80535592/: chr10_65512263_65543775.json  index.html
test/data/svtopo-dirs/chr10_80532333_80535592/js/: app.js
test/data/svtopo-dirs/chr10_80532333_80535592/stylesheets/: styles.css
test/scripts/: compare_files.py  make_tests_from_images_dir.sh  run_end_to_end_tests.sh
test/unit_test/: conftest.py  test_annotation_plotter.py  test_bed_plotter.py  test_bnd_plotter.py  test_chain_plotter.py  test_filters.py  test_image_generation.py  test_page_builder.py  test_svtopovz.py  test_utils.py  test_window_logic.py
