[package]
name = "svtopo"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
chrono = "0.4.24"
rust-htslib = { version = "0.47.0", default-features = false, features = ["static"] }
bio = "2.0.3"
flate2 = "1.0.26"
bgzip = "0.3.1"
serde = "1.0.188"
serde_json = "1.0.107"
serde_derive = "1.0"

log = "0.4.17"
env_logger = "0.11.5"
exitcode = "1.1.2"
