[metadata]
name = svtopovz
version = attr: svtopovz.__version__
description = A tool for visualizing structural variants in genomic data
long_description = file: README.md
long_description_content_type = text/markdown
author = Pacific Biosciences
url = https://github.com/PacificBiosciences/HiFi-SVTopo
project_urls =
    Bug Tracker = https://github.com/PacificBiosciences/HiFi-SVTopo/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib>=3.3.0
    numpy>=1.19.0
    tqdm>=4.45.0
    jinja2>=2.11.0
    psutil>=5.7.0
include_package_data = True

[options.package_data]
svtopovz = 
    templates/*
    templates/*.html
    templates/*.png

[options.packages.find]
include = svtopovz*

[options.entry_points]
console_scripts =
    svtopovz = svtopovz.svtopovz:main

[tool:pytest]
testpaths = test/unit_test
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --cov=svtopovz
    --cov-report=term-missing
    --cov-report=html
    --cov-branch
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

[coverage:run]
branch = True
source = svtopovz

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
ignore_errors = True
omit =
    test/unit_test/*
    setup.py

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203, W503
max-complexity = 10

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True 